--- a/aspnetapp/Pages/Index.cshtml
+++ b/aspnetapp/Pages/Index.cshtml
@@ -10,6 +10,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to .NET Core</h1>
+    <br><h2>That is my update.</h2><br>
 
     <h5>Environment</h1>
     <p>@RuntimeInformation.FrameworkDescription</p>
